[package]
name = "tinypixel"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"


[dependencies]
image = "0.23.12"
winit = "0.23.0"
cgmath = "0.17.0"
log = "0.4.11"
wgpu = "0.6.2"
futures = "0.3.7"
bytemuck = "1.4.1"
euclid = "0.22.1"

[build-dependencies]
anyhow = "1.0.33"
fs_extra = "1.2.0"
glob = "0.3.0"
shaderc = "0.6.3"
